<resources>
    <string name="app_name">FishFinder</string>
    <!--  Register Page  -->
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!--  Login Page  -->
    <string name="sign_in">sign_in</string>
    <string name="sign_in_with_oauth">sign_in_with_oauth</string>
    <string name="welcome_to_fish_app">welcome_to_fish_app</string>
    <!-- Main Page -->
    <string name="main_page">Main Page</string>
    <string name="go_to_profile">Go To Profile</string>
    <string name="logout">Logout</string>
    <string name="search_for_fish">Search For Fish</string>
    <!-- Search For Fish Page -->
    <string name="go_to_fish">Go To Fish</string>
    <string name="textview">Google Maps</string>
    <!-- Fish Info Page -->
    <string name="i_caught_fish">I Caught The Fish!</string>
    <string name="title_activity_fish_location">Map</string>
    <string name="google_api_key1">AIzaSyBUQpGImgGhLK5u4g_RWx-PgLyWprHvLEs</string>
    <string name="sign_in_email">Email</string>
    <string name="i_caught_the_fish">I Caught the Fish!</string>
    <string name="latitude">latitude</string>
    <string name="latitude_longitude">Latitude Longitude</string>
    <string name="longitude">longitude</string>
    <string name="i_caught_the_fish_title">I Caught The Fish!</string>
    <string name="save_to_profile">Save To Profile?</string>
    <string name="publish_to_community_page">Publish To Community Page?</string>
    <string name="button">Button</string>
    <string name="save_confirm">Save!</string>
    <string name="publish_confirm">Publish!</string>
    <string name="confirm_save_finish">Confirm</string>
    <string name="image_fish_upload">Image Fish Upload</string>
    <string name="submit">Submit</string>
    <string name="catch_title">Catch Title</string>
    <string name="length_m">Length: m</string>
    <string name="weight_lb">Weight:Lb</string>
    <string name="fish_name">Fish Name</string>
    <string name="species">Species</string>
    <string name="genus">Genus</string>
    <string name="bait">Bait</string>
    <string name="body_shape">Body Shape</string>
    <string name="user_comments">User Comments</string>
    <string name="settings">Settings:</string>
    <string name="default_settings">Default Settings</string>
    <string name="ask_to_save">Ask To Save?:</string>
    <string name="public_postings_visibility">Public Postings Visibility:</string>
    <string name="off">Off</string>
    <string name="never">Never</string>
    <string name="no">No</string>
    <string name="confirm_settings">Confirm Settings</string>
    <string name="sync_data_automatically">Sync data automatically?</string>
    <string name="ask_to_post_publicly">Ask to post publicly?</string>
    <string name="visible">Visible</string>
    <string name="search_for_fish2">Search For Fish</string>
    <string name="fish_name2">Fish Name</string>
    <string name="cant_find_fish">Cant Find Fish?</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="register2">Register</string>
    <string name="common_name">Common Name:</string>
    <string name="species2">Species:</string>
    <string name="genus2">Genus:</string>
    <string name="body_shape2">Body Shape:</string>
    <string name="length2">Length:</string>
    <string name="water_type">Water Type:</string>
    <string name="comments2">Comments:</string>
    <string name="weight2">Weight:</string>
    <string name="dangerous2">Dangerous:</string>
    <string name="profile_username">Profile Username</string>
    <string name="profile_email">Profile Email</string>
    <string name="saved_captured_fish_moments">Saved Captured Fish Moments!</string>
    <string name="other_profile_statistics">Other Profile Statistics...</string>
    <string name="search3">Search!</string>
    <string name="advanced_search">Advanced Search!</string>
    <string name="advanced_search_bait_lat_long_weather_etc">Advanced Search: bait, lat:long, weather, etc</string>
    <string name="enter_fish_to_query">Enter Fish To Query</string>
    <string name="catch_title4">Catch Title:</string>
    <string name="comments">Comments:</string>
    <string name="user">User:</string>
    <string name="location">Location:</string>
    <string name="likes4">Likes:</string>
    <string name="vets4">Vets</string>
    <string name="fish_name4">Fish Name:</string>
    <string name="demo">Demo</string>
</resources>