<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/congratsfish">

    <EditText
        android:id="@+id/edtSaveBodyShape"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginEnd="220dp"
        android:ems="10"
        android:hint="@string/body_shape"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveLatitude"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtSaveLength"
        android:layout_width="148dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/length_m"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveWeight"
        app:layout_constraintStart_toStartOf="@+id/edtSaveWeight"
        app:layout_constraintTop_toBottomOf="@+id/edtSaveTitle" />

    <EditText
        android:id="@+id/edtSaveWeight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:hint="@string/weight_lb"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmitSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtSaveUserComments"
        app:layout_constraintTop_toBottomOf="@+id/edtSaveLength" />

    <EditText
        android:id="@+id/edtSaveGenus"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/genus"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSaveSpecies"
        android:layout_width="188dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/species"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveGenus"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSaveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="165dp"
        android:ems="10"
        android:hint="@string/catch_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveLength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgButtonTakePicture" />

    <ImageButton
        android:id="@+id/imgButtonTakePicture"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="186dp"
        android:contentDescription="@string/image_fish_upload"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/btnSubmitSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtSaveUserComments"
        app:layout_constraintTop_toBottomOf="@+id/edtSaveWeight" />

    <EditText
        android:id="@+id/edtSaveFishName"
        android:layout_width="188dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/fish_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveSpecies"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSaveLatitude"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/latitude"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveLongitude"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSaveLongitude"
        android:layout_width="176dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/longitude"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveBait"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSaveBait"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/bait"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSaveUserComments"
        app:layout_constraintEnd_toStartOf="@+id/edtSaveWeight"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSaveUserComments"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/user_comments"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmitSave"
        app:layout_constraintEnd_toStartOf="@+id/edtSaveWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtSaveLength" />
</androidx.constraintlayout.widget.ConstraintLayout>